[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "GeoIP"
version = "1.3.2"
description = "MaxMind GeoIP Legacy Database - Python API"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "MaxMind, Inc.", email = "support@maxmind.com" }
]
maintainers = [
    { name = "Andrew Grigorev", email = "andrew@ei-grad.ru" }
]
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python",
    "Topic :: Internet"
    "Topic :: Internet :: Proxy Servers",
]

[project.optional-dependencies]
test = ["pynose"]

[project.urls]
Homepage = "https://github.com/ei-grad/geoip-api-python"
"Bug Tracker" = "https://github.com/ei-grad/geoip-api-python/issues"
